--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "behat/mink-extension": "*",
         "behat/mink-goutte-driver": "*",
         "behat/mink-selenium2-driver": "*",
-        "behat/mink-selenium-driver": "*"
+        "behat/mink-selenium-driver": "*",
+        "fabpot/goutte": "*@dev"
     },
     "autoload": {
         "psr-0": {
