--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "behat/mink-goutte-driver": "*",
         "behat/mink-selenium2-driver": "*",
         "behat/mink-selenium-driver": "*",
-        "fabpot/goutte": "*@dev"
+        "fabpot/goutte": "*@dev",
+        "phpunit/phpunit": "~4"
     },
     "autoload": {
         "psr-0": {
